# rgevolve.wet_4.jms

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: check+deploy.yaml  release.yml  tests.yml
src/rgevolve/wet-4/jms/: data.h5
src/rgevolve/wet_4/jms/: __init__.py  data.h5
tests/: test_package.py
