[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rgevolve.wet_4.jms"
authors = [
    {name = "Aleks SmolkoviÄ", email = "aleks.smolkovic@ijs.si"},
    {name = "Peter Stangl", email = "peter.stangl@cern.ch"},
]
description = "Package providing Renormalization Group Evolution Matrices for the WET-4 in the JMS basis"
requires-python = ">=3.8"
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    "rgevolve-core"
]
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src/"]
include = ["rgevolve.wet_4.jms"]

[tool.setuptools.dynamic]
version = {attr = "rgevolve.wet_4.jms._version.__version__"}

[tool.setuptools.package-data]
"rgevolve.wet_4.jms" = ["data.h5"]
