[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "rgevolve.wet_4.jms"
authors = [
    {name = "Aleks Smolkovič", email = "aleks.smolkovic@ijs.si"},
    {name = "Peter Stangl", email = "peter.stangl@cern.ch"},
]
description = "Package providing Renormalization Group Evolution Matrices for the WET-4 in the JMS basis"
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"
keywords = [
    "renormalization group",
    "RGE",
    "Wilson coefficients",
    "EFT",
    "SMEFT",
    "WET",
    "particle physics",
    "wcxf",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "rgevolve-core"
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/rgevolve/rgevolve.wet_4.jms"

[tool.setuptools.packages.find]
where = ["src/"]
include = ["rgevolve.wet_4.jms"]

[tool.setuptools_scm]
version_file = "src/rgevolve/wet_4/jms/_version.py"

[tool.setuptools.package-data]
"rgevolve.wet_4.jms" = ["data.h5"]
